feat: add basic diffusion_save file

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 data
+viser-client
+recordings
+.DS_Store
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
